--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       const [batteryStatus, setBatteryStatus] = useState("Checking...");
       const [isCharging, setIsCharging] = useState(null);
 
-      const apikey = "ptla_nbVphesJSkjpEOL1d8nC13aSTkfpIvxbZi0FZgsIZJR"; 
-      const capikey = "ptlc_9Bz3izf1dAfC6Sihl4om6yFmvewWT3UgNNYSHU4vA3J";
-      const domain = "https://mypanel.public-void.nusantarahost.web.id";
+      const apikey = "ptla_CzzyH2plEsVWkKBZesN9fEKErILdoklwk52gobptwF4"; 
+      const capikey = "ptlc_ObdhHsuWwhajJXJjpCe6wMVQWvTml0HkXg1eEJEMCr4";
+      const domain = "https://tanzhostnew.apcb.biz.id";
 
       useEffect(() => {
         const start = Date.now();
@@ -94,7 +94,7 @@
               </div>
               <button
                 onClick={() => {
-                  if (password === "sugaganteng") setIsLoggedIn(true);
+                  if (password === "Suga") setIsLoggedIn(true);
                   else alert("Password salah!");
                 }}
                 className="w-full bg-indigo-600 hover:bg-indigo-700 transition duration-200 text-white font-semibold py-3 mt-2 rounded-xl shadow-md"
@@ -194,7 +194,7 @@
       );
     }
 
-    ReactDOM.createRoot(document.getElementById("root")).render(<CreatePteroPanel />);
+    ReactDOM.createRoot(document.getElementById("root")).render(<CreatePanelByELSugaa />);
   </script>
 </body>
 </html>
