--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       );
     }
 
-    ReactDOM.createRoot(document.getElementById("root")).render(<CreatePanelByELSugaa />);
+    ReactDOM.createRoot(document.getElementById("root")).render(<CreatePteroPanel />);
   </script>
 </body>
 </html>
